Se añade panel iframe de Facebook a la sección de Quienes somos

--- a/css/style.scss
+++ b/css/style.scss
@@ -91,6 +91,11 @@ ul {
 
 /* Estilos generales */
 
+.breadcrumb {
+    background-color: transparent;
+    font-size: 14px;
+}
+
 body {
     margin: 0px;
     background: url("../img/background.png") no-repeat center center fixed;
