--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,11 @@ ul li {
 }
 
 /* Estilos generales */
+.breadcrumb {
+  background-color: transparent;
+  font-size: 14px;
+}
+
 body {
   margin: 0px;
   background: url("../img/background.png") no-repeat center center fixed;
